# riprap

./: .gitignore  .travis.yml  Cargo.toml  README.md
data/: test.fasta
src/: bedgraph.rs  cli.rs  errors.rs  freqs.rs  gc.rs  lib.rs  main.rs  runner.rs  snp.rs  stats.rs  windows.rs
src/stats/: counter.rs
src/window/: errors.rs  fields.rs  mod.rs  stats.rs
