[package]
name = "riprap"
version = "0.1.0"
authors = ["Darcy Jones <darcy.ab.jones@gmail.com>"]
edition = "2018"

[dependencies]
rust-htslib = "0.24.0"
bio = "0.28.2"
failure = "0.1.5"
countrs = { git = "https://github.com/darcyabjones/countrs", branch = "master" }
windowrs = { git = "https://github.com/darcyabjones/windowrs", branch = "master" }

[dependencies.clap]
version = "2.33"
default-features = false
features = [ "suggestions", "color", "wrap_help" ]
