[package]
name = "riprap"
version = "0.1.0"
authors = ["Darcy Jones <darcy.ab.jones@gmail.com>"]
edition = "2018"

[dependencies]
rust-htslib = "0.32.0"
bio = "0.31.0"
failure = "0.1.8"
structopt = "0.3.13"
exitfailure = "0.5.1"
countrs = { git = "https://github.com/darcyabjones/countrs", branch = "master" }
windowrs = { git = "https://github.com/darcyabjones/windowrs", branch = "master" }
